src/objects/P7S1_NielsenDataAggr__c.object
<CustomObject>
    <description>auf Zeitraum GJ und YTM aggregierte Nielsen-Daten</description>
    <fields>
        <fullName>P7S1_Account__c</fullName>
        <description>zugeordneter Account</description>
        <inlineHelpText>zugeordneter Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Nielsen-Daten</relationshipLabel>
        <relationshipName>P7S1_NielsenDataAggr</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>P7S1_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_GesamtDigitalR__c</fullName>
        <label>Gesamt DigitalR</label>
        <summarizedField>P7S1_NielsenDataDetail__c.P7S1_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>P7S1_NielsenDataDetail__c.P7S1_Medienmix__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_NielsenDataDetail__c.P7S1_NielsenDataAggr__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtDigital__c</fullName>
        <label>Gesamt Digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtMkl__c</fullName>
        <formula>P7S1_MklGruppeTv__c + P7S1_MklGruppeDigital__c + P7S1_MklGruppePrint__c + P7S1_MklGruppeRest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medienklassen Gesamt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtPrintR__c</fullName>
        <label>Gesamt PrintR</label>
        <summarizedField>P7S1_NielsenDataDetail__c.P7S1_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>P7S1_NielsenDataDetail__c.P7S1_Medienmix__c</field>
            <operation>equals</operation>
            <value>Print</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_NielsenDataDetail__c.P7S1_NielsenDataAggr__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtPrint__c</fullName>
        <label>Gesamt Print</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtRestR__c</fullName>
        <label>Gesamt RestR</label>
        <summarizedField>P7S1_NielsenDataDetail__c.P7S1_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>P7S1_NielsenDataDetail__c.P7S1_Medienmix__c</field>
            <operation>equals</operation>
            <value>Rest</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_NielsenDataDetail__c.P7S1_NielsenDataAggr__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtRest__c</fullName>
        <label>Gesamt Rest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtTVR__c</fullName>
        <label>Gesamt TVR</label>
        <summarizedField>P7S1_NielsenDataDetail__c.P7S1_Brutto__c</summarizedField>
        <summaryFilterItems>
            <field>P7S1_NielsenDataDetail__c.P7S1_Medienmix__c</field>
            <operation>equals</operation>
            <value>TV</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_NielsenDataDetail__c.P7S1_NielsenDataAggr__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_GesamtTV__c</fullName>
        <label>Gesamt TV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Last_Entry_Date__c</fullName>
        <label>Last Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_MklGruppeDigital__c</fullName>
        <label>Digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklGruppePrint__c</fullName>
        <label>Print</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklGruppeRest__c</fullName>
        <label>Rest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklGruppeTv__c</fullName>
        <label>TV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklSoaDigital__c</fullName>
        <label>SoA Digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklSoaPrint__c</fullName>
        <label>SoA Print</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklSoaRest__c</fullName>
        <label>SoA Rest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MklSoaTv__c</fullName>
        <label>SoA TV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Year__c</fullName>
        <label>Jahr</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ZeitraumTyp__c</fullName>
        <description>GJ=Gesamtjahr, YTM=YearToMonth</description>
        <inlineHelpText>GJ=Gesamtjahr, YTM=YearToMonth</inlineHelpText>
        <label>Zeitraum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YTM</fullName>
                </value>
                <value>
                    <fullName>GJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Nielsen-Daten</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_Year__c</columns>
        <columns>P7S1_ZeitraumTyp__c</columns>
        <columns>P7S1_GesamtDigital__c</columns>
        <columns>P7S1_GesamtDigitalR__c</columns>
        <columns>P7S1_GesamtPrint__c</columns>
        <columns>P7S1_GesamtPrintR__c</columns>
        <columns>P7S1_GesamtRest__c</columns>
        <columns>P7S1_GesamtRestR__c</columns>
        <columns>P7S1_GesamtTV__c</columns>
        <columns>P7S1_GesamtTVR__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Nielsen-Daten-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nielsen-Daten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>